add controller for robots without tg api
