# src/main/java/org/bitebuilders/controller/dto/StatusWithRobotsDTO.java
@@ -1,0 +1,8 @@
+package org.bitebuilders.controller.dto;
+
+import java.util.List;
+
+public record StatusWithRobotsDTO(
+        Long statusId,
+        List<RobotDTO> robots
+) {}
