# src/main/java/org/bitebuilders/controller/requests/CreateRobotRequest.java
@@ -1,0 +1,10 @@
+package org.bitebuilders.controller.requests;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record CreateRobotRequest(
+        @NotBlank String name,
+        @NotBlank String type,
+        @NotBlank String message,
+        String link
+) {}
