# src/main/java/org/bitebuilders/controller/requests/UpdateRobotRequest.java
@@ -1,0 +1,10 @@
+package org.bitebuilders.controller.requests;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record UpdateRobotRequest(
+        @NotBlank String name,
+        @NotBlank String message,
+        String link
+) {}
+
